--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JS challenges</title>
-    <script src="/MilTimeConveter.js" type="module"></script>
-    <script src="/TimeFunctions.js" type="module"></script>
-    <script src="/Challenge.js" type="module"></script>
+    <script src="./MilTimeConveter.js" type="module"></script>
+    <script src="./TimeFunctions.js" type="module"></script>
+    <script src="./Challenge.js" type="module"></script>
     <link rel="stylesheet" href="./Index.css">
 </head>
 <body>
